# pytorch

./: CMakeLists copy.txt  CMakeLists.txt  setup.py  tee  test.txt
c10/: CMakeLists.txt
c10/test/: CMakeLists.txt
cmake/: Dependencies.cmake  Dependencies.cmake.full
cmake/Modules/: FindMKL.cmake
cmake/public/: utils.cmake
my_test/: Makefile
my_test/src/: create_tensor.cpp
my_try/: commands
my_try/20251120-setup/: commands  setup.py
my_try/20251120-setup/build_use_cuda_0/: Log1.txt  Log4.txt  Log_full.txt  error-20251125.txt
my_try/20251128-2-setup/: 20251128-2-cmake.txt  README  build.sh  changes.txt  commands.txt
my_try/20251128-3-CMakeLists.txt/: CMakeLists_info.txt  build-20251128-3-CMakeLists.txt  temp.txt
my_try/20251128-setup/: 20251128-no-cuda-no-ninja.txt
my_try/20251129-2-c10/: Dependencies-info.txt  build-20251129-2-all.txt
my_try/20251201-1-setup/: 20251201-1-setup.success.txt
my_try/build_use_cuda_0/: Log1.txt  Log2.txt  Log3.txt  Log4.txt  Log5.txt  included_dependencies.txt  knowledge.txt
tools/: build_pytorch_libs.py
tools/setup_helpers/: cmake.py
torch/csrc/: Module.cpp
torch/headeronly/: CMakeLists.txt
